syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "proto/snapshotpb/snapshot.proto";
import "proto/jobpb/job.proto";
import "handlerpb/handler.proto";
import "jobconfigpb/jobconfig.proto";
option go_package = "reduction.dev/reduction/proto/workerpb";

package worker;

service Operator {
  rpc Deploy(DeployOperatorRequest) returns (Empty);
  rpc HandleEventBatch(HandleEventBatchRequest) returns (Empty);
  rpc UpdateRetainedCheckpoints(UpdateRetainedCheckpointsRequest) returns (Empty);
  rpc NeedsTable(NeedsTableRequest) returns (NeedsTableResponse);
}

service SourceRunner {
  rpc Deploy(DeploySourceRunnerRequest) returns (Empty);
  rpc AssignSplits(AssignSplitsRequest) returns (Empty);
  rpc StartCheckpoint(StartCheckpointRequest) returns (Empty);
}

message DeployOperatorRequest {
  repeated job.NodeIdentity operators = 1;
  repeated string source_runner_ids = 2;
  repeated snapshot.OperatorCheckpoint checkpoints = 3;
  int32 key_group_count = 4;
  repeated dev.reduction.jobconfig.Sink sinks = 5;
  string storage_location = 6;
}

message Empty{}

message HandleEventBatchRequest {
  string sender_id = 1;
  repeated Event events = 2;
}

message Event {
  oneof event {
    dev.reduction.handler.KeyedEvent keyed_event = 2;
    Watermark watermark = 3;
    CheckpointBarrier checkpoint_barrier = 4;
    SourceCompleteEvent source_complete = 5;
  }
}

message CheckpointBarrier {
  uint64 checkpoint_id = 1;
}

message SourceCompleteEvent {}

message Watermark {
  google.protobuf.Timestamp timestamp = 2;
}

message DeploySourceRunnerRequest {
  repeated job.NodeIdentity operators = 2;
  int32 key_group_count = 3;
  repeated dev.reduction.jobconfig.Source sources = 4;
}

message AssignSplitsRequest {
  repeated SourceSplit splits = 1;
}

message SourceSplit {
  string split_id = 1;
  string source_id = 2;
  bytes cursor = 3;
}


message StartCheckpointRequest {
  uint64 checkpoint_id = 1;
}

message UpdateRetainedCheckpointsRequest {
  repeated uint64 checkpoint_ids = 1;
}

message NeedsTableRequest {
  string table_uri = 1;
}

message NeedsTableResponse {
  bool table_needed = 1;
}
